Fix navbar alignment

--- a/desktop.css
+++ b/desktop.css
@@ -62,7 +62,7 @@ body {
   align-items: center;
   background-color: #fff;
   border-bottom-left-radius: 60px;
-  padding-top: 130px;
+  padding-top: 100px;
 }
 
 .headline {
